# quickstep-storage-explorer

./: .gitignore  BUILDING.txt  COPYING.txt  CREDITS.txt  README.txt
src/: CMakeLists.txt  Doxyfile
src/catalog/: CMakeLists.txt  Catalog.cpp  Catalog.hpp  CatalogAttribute.hpp  CatalogDatabase.cpp  CatalogDatabase.hpp  CatalogModule.hpp  CatalogRelation.cpp  CatalogRelation.hpp  CatalogTypedefs.hpp
src/experiments/storage_explorer/: CMakeLists.txt  DataGenerator.cpp  DataGenerator.hpp  ExperimentConfiguration.cpp  ExperimentConfiguration.hpp  ExperimentDriver.cpp  ExperimentDriver.hpp  QueryExecutor.cpp  QueryExecutor.hpp  StorageExplorer.cpp  StorageExplorerConfig.h.in  TestRunner.cpp  TestRunner.hpp  ThreadAffinity.cpp  ThreadAffinity.hpp  Timer.hpp
src/expressions/: CMakeLists.txt  ComparisonPredicate.cpp  ComparisonPredicate.hpp  ExpressionsModule.hpp  Predicate.hpp  Scalar.cpp  Scalar.hpp  TrivialPredicates.hpp
src/storage/: BasicColumnStoreTupleStorageSubBlock.cpp  BasicColumnStoreTupleStorageSubBlock.hpp  BloomFilterSubBlock.cpp  BloomFilterSubBlock.hpp  CMakeLists.txt  CSBTreeIndexSubBlock.cpp  CSBTreeIndexSubBlock.hpp  ColumnStoreUtil.cpp  ColumnStoreUtil.hpp  CompressedBlockBuilder.cpp  CompressedBlockBuilder.hpp  CompressedColumnStoreTupleStorageSubBlock.cpp  CompressedColumnStoreTupleStorageSubBlock.hpp  CompressedPackedRowStoreTupleStorageSubBlock.cpp  CompressedPackedRowStoreTupleStorageSubBlock.hpp  CompressedTupleStorageSubBlock.cpp  CompressedTupleStorageSubBlock.hpp  IndexSubBlock.hpp  InsertDestination.cpp  InsertDestination.hpp  PackedRowStoreTupleStorageSubBlock.cpp  PackedRowStoreTupleStorageSubBlock.hpp  StorageBlock.cpp  StorageBlock.hpp  StorageBlockInfo.cpp  StorageBlockInfo.hpp  StorageBlockLayout.cpp  StorageBlockLayout.hpp  StorageBlockLayout.proto  StorageConfig.h.in  StorageConstants.hpp  StorageErrors.cpp  StorageErrors.hpp  StorageManager.cpp  StorageManager.hpp  StorageModule.hpp  TupleIdSequence.hpp  TupleReference.hpp  TupleStorageSubBlock.cpp  TupleStorageSubBlock.hpp
src/threading/: CMakeLists.txt  Mutex.cpp  Mutex.hpp  Thread.cpp  Thread.hpp  ThreadingConfig.h.in  ThreadingModule.hpp
src/threading/cpp11/: Mutex.hpp  Thread.hpp
src/threading/posix/: CMakeLists.txt  Mutex.cpp  Mutex.hpp  Thread.hpp
src/threading/windows/: CMakeLists.txt  Mutex.cpp  Mutex.hpp  Thread.cpp  Thread.hpp
src/types/: AllowedTypeConversion.hpp  AsciiStringComparators.hpp  BasicComparisons.cpp  BasicComparisons.hpp  CMakeLists.txt  CharType.cpp  CharType.hpp  Comparison.cpp  Comparison.hpp  CompressionDictionary.cpp  CompressionDictionary.hpp  CompressionDictionaryBuilder.cpp  CompressionDictionaryBuilder.hpp  DoubleType.cpp  DoubleType.hpp  FloatType.cpp  FloatType.hpp  IntType.cpp  IntType.hpp  LongType.cpp  LongType.hpp  NumericComparators.hpp  NumericSuperType.hpp  Operation.cpp  Operation.hpp  Tuple.cpp  Tuple.hpp  Type.cpp  Type.hpp  TypeErrors.cpp  TypeErrors.hpp  TypeInstance.cpp  TypeInstance.hpp  TypesConfig.h.in  TypesModule.hpp  VarCharType.cpp  VarCharType.hpp  strnlen.hpp
src/utility/: BitManipulation.hpp  BitVector.hpp  BloomFilter.hpp  CMakeLists.txt  ContainerCompat.hpp  CstdintCompat.hpp  Macros.hpp  PtrList.hpp  PtrMap.hpp  PtrVector.hpp  ScopedBuffer.hpp  ScopedPtr.hpp  UtilityConfig.h.in  UtilityModule.hpp
